--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -277,7 +277,7 @@
     <!--==============================
         Breadcumb
         ============================== -->
-    <div class="breadcumb-wrapper " data-bg-src="assets/img/breadcumb/breadcumb-bg.png">
+    <div class="breadcumb-wrapper " data-bg-src="assets/img/bg/hero-bg-3.png">
         <div class="container z-index-common">
             <div class="breadcumb-content">
                 <h1 class="breadcumb-title">Bizim <span>Hakkımızda</span></h1>
