--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <header class="vs-header header-layout1 style2">
         <div class="header-top style2">
             <div class="main-container2">
-                <div class="row justify-content-md-between justify-content-center align-items-center">
+                <div class="row justify-content-md-between justify-content-center align-items-between">
                     <div class="col-auto d-md-block d-none">
                         <div class="header-links">
                             <ul>
@@ -140,7 +140,7 @@
             <div class="sticky-active">
                 <div class="menu-area">
                     <div class="main-container2">
-                        <div class="row align-items-center justify-content-between">
+                        <div class="row align-items-center justify-content-start">
                             <div class="col-auto">
                                 <div class="header-logo">
                                     <a href="index.html">
@@ -199,7 +199,7 @@
 	  ******************************** -->
     <!-- Hero Area -->
     <section class="vs-hero vs-hero-style2" data-wow-delay="0.25s" aria-hidden="true">
-        <div class="vs-hero__item2 style2" data-bg-src="assets/img/bg/hero-bg-3.png">
+        <div class="vs-hero__item2 style2" data-bg-src="assets/img/bg/index.hero.png">
             <div class="container">
                 <div class="row justify-content-start align-items-center">
                     <div class="col-lg-7 position-relative">
@@ -207,10 +207,10 @@
                             <div class="vs-hero__subtitle wow animate__fadeInUp" data-wow-delay="0.60s"><span
                                     class="icon"><img src="assets/img/icon/satisfaction-icon.svg"
                                         alt="Hero Icon"></span>100% Memnuniyet </div>
-                            <h1 class="vs-hero__title wow animate__fadeInUp" data-wow-delay="0.70s">Koltuk Yıkama <span
-                                    class="vs-hero__title--highlight">ve Temizlik</span> Çözümleri</h1>
+                            <h1 class="vs-hero__title wow animate__fadeInUp" data-wow-delay="0.70s">Anatolian <span
+                                    class="vs-hero__title--highlight">Kaliteli</span> Deniz Ürünleri</h1>
                             <p class="vs-hero__text wow animate__fadeInUp" style="color:white;" data-wow-delay="0.80s">
-                                İstanbul'un tüm ilçelerine ücretsiz teslimat hizmeti.</p>
+                                Kalitemizle Hepinizi Mutlu Ediyoruz.</p>
                             <div class="hero-btn wow animate__fadeInUp" data-wow-delay="0.90s">
                                 <a class="vs-btn2" href="tel:+905426209991">Bilgi Al<i
                                         class="far fa-long-arrow-right"></i></a>
@@ -332,13 +332,13 @@
                                 <h3 class="list-title">Bizi seçmenizin 4 nedeni</h3>
                                 <ul>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">% 100 Memnuniyet garantisi</li>
+                                            class="icon"> Tedarik sürecinin her aşaması şeffaf ve izlenebilir.</li>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">Servis zamanını siz seçin</li>
+                                            class="icon">Onaylı çiftlikler ve denetimden geçmiş üretim tesisleriyle çalışıyoruz.</li>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">Nazik ve eğitimli personeller</li>
+                                            class="icon">İsteğe özel ambalajlama seçenekleri sunuyoruz.</li>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">3 Günde teslim hizmeti</li>
+                                            class="icon">Uygun fiyatlarla ve düzenli teslimat garantisiyle hizmet veriyoruz.</li>
                                 </ul>
 
                             </div>
@@ -457,7 +457,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-hali-yikama.jpg" alt="halı yıkama" class="w-100">
+                                <img src="assets/img/service/somon-alabalik.jpg" alt="halı yıkama" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -470,9 +470,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Halı Yıkama</a></h2>
-                                <p class="service-text">Halı yıkatma olarak yıkamacılığın İstanbul ‘daki merkezine
-                                    hoşgeldiniz.</p>
+                                <h2 class="service-title"><a>Ürün Saklama ve Sevkiyat</a></h2>
+                                <p class="service-text"> Ürünlerimiz -18°C veya +0°C’de dondurulmuş ya da soğutulmuş şekilde hazırlanır, 10 gün içinde teslim edilir ve ihracat evrakları ile sağlık sertifikalarıyla birlikte gönderilir.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -483,7 +482,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-perde-yikama.jpg" alt="perde yıkama" class="w-100">
+                                <img src="assets/img/service/kalitestandart.jpg" alt="perde yıkama" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -496,9 +495,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Perde Yıkama</a></h2>
-                                <p class="service-text">Stor, zebra, tül, jaluzi, fon, krovaze, japon, tavan, blackout,
-                                    sahne, yıkama hizmeti.</p>
+                                <h2 class="service-title"><a>Kalite Standartları</a></h2>
+                                <p class="service-text">Ürünlerimiz, AB onaylı modern tesislerde işlenir, +0°C / -18°C soğuk zincirle sevk edilir, laboratuvar testlerinden geçer ve veteriner sağlık sertifikalarıyla birlikte gönderilir.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -509,7 +507,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-yatak-yikama.jpg" alt="Yatak Yıkama" class="w-100">
+                                <img src="assets/img/service/ihracat.jpg" alt="Yatak Yıkama" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -522,9 +520,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Yatak Yıkama</a></h2>
-                                <p class="service-text">Sizlere tertemiz yataklarda sağlıklı ve rahat uykuyu sağlamak
-                                    için çalışıyoruz.</p>
+                                <h2 class="service-title"><a>İhracat Kalitesi</a></h2>
+                                <p class="service-text">Hijyenik ve modern tesislerde AB standartlarına uygun alabalık ve somon üretiyor, sertifikalı, sürdürülebilir ve ihracata hazır şekilde hizmet veriyoruz.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -535,7 +532,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-arac-yikama.png" alt="Yorgan Yıkama" class="w-100">
+                                <img src="assets/img/service/dogal.jpg" alt="Yorgan Yıkama" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -548,9 +545,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Araç Koltuk Yıkama</a></h2>
-                                <p class="service-text">Temizlik işlemleri için uygun ve hijyenik hizmetleri profesyonel
-                                    şekilde vermektedir.</p>
+                                <h2 class="service-title"><a>Doğal Ortamda Yetiştiricilik</a></h2>
+                                <p class="service-text">2300 m rakımda, doğal kaynak suyunda yetiştirilen ürünlerimiz; AB standartlarına uygundur, tazeliği ve kalitesiyle rekabetçi fiyatlar sunar.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -785,8 +781,7 @@
                                         </div>
                                     </div>
                                     <p class="testi-text">
-                                        “Uygun temizlik şirketiyle çalıştığınızda rahat bir nefes alırsınız çünkü eviniz
-                                        halınız koltuğunuz perdeniz tamamen temizlenir...”
+                                        "Anatolian'ı ilk duyduğumda kalitesini tahmin etmiştim, ancak bu kadarını beklemiyordum"
                                     </p>
                                     <div class="vs-testi__top mb-0">
                                         <div class="vs-testi__author">
@@ -809,8 +804,7 @@
                                         </div>
                                     </div>
                                     <p class="testi-text">
-                                        "İlgili ekip arkadaşları, hızlı servisi ile sizlere tavsiye ederim. Halılarım
-                                        tertemiz geldi. Teşekkürler...”
+                                        "Sipariş ettiğim ürünler 10 gün içerisinde geldi ilk defa bu kadar memnun kaldım. Teşekkürler Anatolia!"
                                     </p>
                                     <div class="vs-testi__top mb-0">
                                         <div class="vs-testi__author">
