--- a/index.html
+++ b/index.html
@@ -429,9 +429,8 @@
                 <div class="col-lg-6 col">
                     <div class="title-area text-left wow animate__fadeInUp title-anime animation-style5"
                         data-wow-delay="0.25s">
-                        <span class="sec-subtitle left-shape justify-content-center title-anime__title"> TEMİZLİK
-                            HİZMETLERİMİZ</span>
-                        <h2 class="sec-title title-anime__title text-white">Profesyonel Hizmetlerimiz</h2>
+                        <span class="sec-subtitle left-shape justify-content-center title-anime__title"> Prosedürlerimiz</span>
+                        <h2 class="sec-title title-anime__title text-white">Kalite Prosedürlerimiz</h2>
                     </div>
                 </div>
                 <div class="col-lg-6 col-auto">
@@ -557,7 +556,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-ev-temizligi.jpg" alt="ev temizliği" class="w-100">
+                                <img src="assets/img/service/herbalik.jpg" alt="ev temizliği" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -570,9 +569,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Ev/Ofis Temizliği</a></h2>
-                                <p class="service-text">Ev temizliği hizmetiyle şık ve rerah bir ev ortamına kısa sürede
-                                    ulaşmak mümkün.</p>
+                                <h2 class="service-title"><a>Her Balıkta Ustalık</a></h2>
+                                <p class="service-text">İşlediğimiz her balık, deneyimli ve uzman ekibimizin titizliği, emeği ve kaliteye verdiği önemin somut bir yansımasıdır.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -583,7 +581,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-koltuk-yikama.jpg" alt="koltuk yıkama" class="w-100">
+                                <img src="assets/img/service/calisan.jpg" alt="koltuk yıkama" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -596,9 +594,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Koltuk Yıkama</a></h2>
-                                <p class="service-text">Evinize ve işyerinize gelerek koltuk, yatak, sandalye ve
-                                    halılarınızı yerinde yıkıyoruz.</p>
+                                <h2 class="service-title"><a>Uzman Kadro, Hijyenik İşlem</a></h2>
+                                <p class="service-text">Her bir balık, hijyen standartlarına uygun modern tesislerde, tam donanımlı uzman ekibimiz tarafından özenle işlenir ve paketlenir. Kaliteyi titizlikle buluşturuyoruz.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -623,7 +620,7 @@
                         <div class="service-body">
                             <div class="service-content">
                                 <h2 class="service-title"><a>Masa Sandalye Yıkama</a></h2>
-                                <p class="service-text">Masa , Sandalyelerinizi ilk günki gibi temizliyoruz. </p>
+                                <p class="service-text">Su ürünleri üretim, işleme ve ihracatında uzman firmamız; ISO 22000, HACCP, AB ve veterinerlik onaylıdır, yıllık kapasitemiz 10 milyon tondur. </p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
