--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -193,7 +193,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@uyguntemizlik.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@Anatolian Su Ürünleri.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -315,8 +315,8 @@
                             <div class="title-area title-anime animation-style2">
                                 <span class="sec-subtitle left-shape justify-content-center title-anime__title">NEDEN
                                     BİZ</span>
-                                <h2 class="sec-title title-anime__title">İstanbul'un en iyi <span
-                                        class="title-highlight">temizlik hizmeti veren</span> firmasıyız.</h2>
+                                <h2 class="sec-title title-anime__title">Türkiye'nin En İyi <span
+                                        class="title-highlight">Deniz Ürünleri</span> firmasıyız.</h2>
                             </div>
                             <p class="about-text">
                                 En uygun ücretlerle kaliteli hizmet ve işçilik analayışıyla yola çıkıyoruz.
@@ -328,13 +328,13 @@
                                 <h3 class="list-title">Bizi seçmenizin 4 nedeni</h3>
                                 <ul>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">% 100 Memnuniyet garantisi</li>
+                                            class="icon">Tedarik sürecinin her aşaması şeffaf ve izlenebilir.</li>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">Servis zamanını siz seçin</li>
+                                            class="icon">Onaylı çiftlikler ve denetimden geçmiş üretim tesisleriyle çalışıyoruz.</li>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">Nazik ve eğitimli personeller</li>
+                                            class="icon">İsteğe özel ambalajlama seçenekleri sunuyoruz.</li>
                                     <li class="list-item"><img src="assets/img/icon/right-mark-icon2.svg" alt="icon"
-                                            class="icon">3 Günde teslim hizmeti</li>
+                                            class="icon">Uygun fiyatlarla ve düzenli teslimat garantisiyle hizmet veriyoruz.</li>
                                 </ul>
 
                             </div>
@@ -391,7 +391,7 @@
             <div class="video-popup-content">
                 <span class="video-close">&times;</span>
                 <video id="localVideo" controls autoplay>
-                    <source src="assets/img/temiz.mp4" type="video/mp4">
+                    <source src="assets/img/balikvideo.mp4" type="video/mp4">
                     Tarayıcınız video etiketini desteklemiyor.
                 </video>
             </div>
@@ -480,7 +480,7 @@ Bugün geldiğimiz noktada, hem yerli hem de uluslararası pazarlarda güvenilir
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Uyguntemizlik.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">Anatolian Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
