--- a/index-2.html
+++ b/index-2.html
@@ -174,7 +174,7 @@
 <div class="col-auto d-md-block d-none">
 <div class="header-links">
 <ul>
-<li><i class="far fa-envelope"></i><a data-i18n="infouyguntemizlikcom" href="mailto:info@haliyikatma.com">info@uyguntemizlik.com</a></li>
+<li><i class="far fa-envelope"></i><a data-i18n="infouyguntemizlikcom" href="mailto:info@haliyikatma.com">info@Anatolian Su Ürünleri.com</a></li>
 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
 </ul>
@@ -1051,7 +1051,7 @@
 <div class="container">
 <div class="row justify-content-xl-between justify-content-center align-items-center">
 <div class="col-auto">
-<p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a data-i18n="uyguntemizlikcom" href="index.html">Uyguntemizlik.com</a> Tüm hakları saklıdır.</p>
+<p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a data-i18n="uyguntemizlikcom" href="index.html">Anatolian Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
 </div>
 <div class="col-auto">
 <div class="copyright-img">
