--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="header-links">
                             <ul>
                                 <li><i class="far fa-envelope"></i><a
-                                        href="mailto:info@haliyikatma.com">info@uyguntemizlik.com</a></li>
+                                        href="mailto:info@haliyikatma.com">info@Anatolian Su Ürünleri.com</a></li>
                                 <li class="d-lg-inline d-none"><i class="far fa-clock"></i>Pazartesi - Cumartesi 8:00 -
                                     21:00</li>
                             </ul>
@@ -239,10 +239,10 @@
                 <div class="row gx-0 wow animate__fadeInUp" data-wow-delay="0.35s">
                     <div class="col-lg-3 col-md-6 service-style3">
                         <div class="service-content border-right">
-                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/service-icon-3-1.svg"
+                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/balikicon.svg"
                                         alt="service-icon"></span></div>
-                            <h2 class="service-title"><a href="service.html">Antibakteriyel</a></h2>
-                            <p class="service-text">Antibakteriyel doğal ürünler ile yıkama.</p>
+                            <h2 class="service-title"><a href="service.html">Doğal Yetiştiricilik</a></h2>
+                            <p class="service-text">Doğal ortamda, etik koşullarda yetiştirilen balıklar.</p>
                             <span class="shape-mockup" style="right: 0; top: 0;"><img
                                     src="assets/img/shapes/service-shape-4.png" alt="service element"></span>
                             <div class="service-bg1">
@@ -252,10 +252,10 @@
                     </div>
                     <div class="col-lg-3 col-md-6 service-style3">
                         <div class="service-content border-right">
-                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/service-icon-3-2.svg"
+                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/gemi.png"
                                         alt="service-icon"></span></div>
-                            <h2 class="service-title"><a href="service.html">Buhar Makinesi</a></h2>
-                            <p class="service-text">Buhar makinesi ile gözle görülmeyen tüm kirleri yok ediyoruz.</p>
+                            <h2 class="service-title"><a href="service.html">Deniz Yoluyla Nakliye</a></h2>
+                            <p class="service-text">Güvenli ve zamanında teslimat. Ürünlerinizi dünya limanlarına soğuk zincir güvencesiyle ulaştırıyoruz.</p>
                             <span class="shape-mockup" style="right: 0; top: 0;"><img
                                     src="assets/img/shapes/service-shape-4.png" alt="service element"></span>
                             <div class="service-bg1">
@@ -265,10 +265,10 @@
                     </div>
                     <div class="col-lg-3 col-md-6 service-style3">
                         <div class="service-content border-right">
-                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/service-icon-3-3.svg"
+                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/truck-icon.png"
                                         alt="service-icon"></span></div>
                             <h2 class="service-title"><a href="service.html">Hızlı Teslimat</a></h2>
-                            <p class="service-text">Vakit kaybına son 3 günde teslimat.</p>
+                            <p class="service-text">Üürnlerinizi 10 gün içinde size teslim ediyoruz</p>
                             <span class="shape-mockup" style="right: 0; top: 0;"><img
                                     src="assets/img/shapes/service-shape-4.png" alt="service element"></span>
                             <div class="service-bg1">
@@ -278,10 +278,10 @@
                     </div>
                     <div class="col-lg-3 col-md-6 service-style3">
                         <div class="service-content">
-                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/service-icon-3-4.svg"
+                            <div class="icon-btn3"> <span class="icon"><img src="assets/img/icon/kartanesi.png"
                                         alt="service-icon"></span></div>
-                            <h2 class="service-title"><a href="service.html">Ücretsiz Servis</a></h2>
-                            <p class="service-text">En iyisini seçmeniz için ücretsiz servis.</p>
+                            <h2 class="service-title"><a href="service.html">Derin Dondurucu Sistemleri</a></h2>
+                            <p class="service-text">Ürün kalitesini maksimumda tutan ileri teknoloji soğutma çözümleri. Dondurulmuş gıda için ideal koşullar.</p>
                             <span class="shape-mockup" style="right: 0; top: 0;"><img
                                     src="assets/img/shapes/service-shape-4.png" alt="service element"></span>
                             <div class="service-bg1">
@@ -320,7 +320,7 @@
                                 <span class="sec-subtitle left-shape justify-content-center title-anime__title">NEDEN
                                     BİZ</span>
                                 <h2 class="sec-title title-anime__title">Türkiye'nin en iyi <span
-                                        class="title-highlight">Balık Ticareti</span> firmasıyız.</h2>
+                                        class="title-highlight">Deniz Ürünleri</span> firmasıyız.</h2>
                             </div>
                             <p class="about-text">
                                 En uygun ücretlerle kaliteli hizmet ve işçilik analayışıyla yola çıkıyoruz.
@@ -385,38 +385,38 @@
             </a>
         </div>
         <div class="image-gallery__col image-gallery__three wow animate__fadeInUp" data-wow-delay="0.65s">
-            <img src="assets/img/gallery/gallery-img-2-4.jpg" alt="image gallery">
-            <a href="assets/img/gallery/gallery-img-2-4.jpg" class="image-gallery__col--popup popup-image">
+            <img src="assets/img/service/balikdepo.jpg" alt="image gallery">
+            <a href="assets/img/service/balikdepo.jpg" class="image-gallery__col--popup popup-image">
                 <i class="fal fa-plus"></i>
             </a>
         </div>
         <div class="image-gallery__col image-gallery__four wow animate__fadeInUp" data-wow-delay="0.85s">
-            <img src="assets/img/gallery/gallery-img-2-5.jpg" alt="image gallery">
-            <a href="assets/img/gallery/gallery-img-2-5.jpg" class="image-gallery__col--popup popup-image">
+            <img src="assets/img/service/kafes.png" alt="image gallery">
+            <a href="assets/img/service/kafes.png" class="image-gallery__col--popup popup-image">
                 <i class="fal fa-plus"></i>
             </a>
         </div>
         <div class="image-gallery__col image-gallery__five wow animate__fadeInUp" data-wow-delay="0.25s">
-            <img src="assets/img/gallery/gallery-img-2-6.jpg" alt="image gallery">
-            <a href="assets/img/gallery/gallery-img-2-6.jpg" class="image-gallery__col--popup popup-image">
+            <img src="assets/img/service/herbalik.jpg" alt="image gallery">
+            <a href="assets/img/service/herbalik.jpg" class="image-gallery__col--popup popup-image">
                 <i class="fal fa-plus"></i>
             </a>
         </div>
         <div class="image-gallery__col image-gallery__six wow animate__fadeInUp" data-wow-delay="0.45s">
-            <img src="assets/img/gallery/gallery-img-2-7.jpg" alt="image gallery">
-            <a href="assets/img/gallery/gallery-img-2-7.jpg" class="image-gallery__col--popup popup-image">
+            <img src="assets/img/service/ihracat.jpg" alt="image gallery">
+            <a href="assets/img/service/ihracat.jpg" class="image-gallery__col--popup popup-image">
                 <i class="fal fa-plus"></i>
             </a>
         </div>
         <div class="image-gallery__col image-gallery__seven wow animate__fadeInUp" data-wow-delay="0.65s">
-            <img src="assets/img/gallery/gallery-img-2-2.jpg" alt="image gallery">
-            <a href="assets/img/gallery/gallery-img-2-2.jpg" class="image-gallery__col--popup popup-image">
+            <img src="assets/img/service/somon-alabalik.jpg" alt="image gallery">
+            <a href="assets/img/service/somon-alabalik.jpg" class="image-gallery__col--popup popup-image">
                 <i class="fal fa-plus"></i>
             </a>
         </div>
         <div class="image-gallery__col image-gallery__eight wow animate__fadeInUp" data-wow-delay="0.85s">
-            <img src="assets/img/gallery/gallery-img-2-8.jpg" alt="image gallery">
-            <a href="assets/img/gallery/gallery-img-2-8.jpg" class="image-gallery__col--popup popup-image">
+            <img src="assets/img/service/uretimguvence.jpg" alt="image gallery">
+            <a href="assets/img/service/uretimguvence.jpg" class="image-gallery__col--popup popup-image">
                 <i class="fal fa-plus"></i>
             </a>
         </div>
@@ -631,7 +631,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-yerinde-yikama.jpg" alt="Yerinde Yıkama"
+                                <img src="assets/img/service/musteri-hizmet.jpg" alt="musteri-hizmet"
                                     class="w-100">
                             </a>
                             <div class="service-icon">
@@ -645,9 +645,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Yerinde Yıkama</a></h2>
-                                <p class="service-text">Cami’iler, Kuran Kursları, Oteller, İşyerleri, Evler, Plazalar,
-                                    Residencler, Depolar…</p>
+                                <h2 class="service-title"><a> 7/24 Müşteri Desteği</a></h2>
+                                <p class="service-text">Haftanın her günü, günün her saati ulaşabileceğiniz destek ekibimizle her zaman yanınızdayız. Sorularınızı hızlı ve çözüm odaklı şekilde yanıtlıyoruz.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -658,7 +657,7 @@
                     <div class="service-style4">
                         <div class="service-img">
                             <a>
-                                <img src="assets/img/service/slide-leke-cikartma.jpg" alt="Leke Çıkartma" class="w-100">
+                                <img src="assets/img/service/balikdepo.jpg" alt="balikdepo" class="w-100">
                             </a>
                             <div class="service-icon">
                                 <span class="shape-mockup" style="left: -14px; top: -10px;"><img
@@ -671,9 +670,8 @@
                         </div>
                         <div class="service-body">
                             <div class="service-content">
-                                <h2 class="service-title"><a>Leke Çıkartma</a></h2>
-                                <p class="service-text">Halılarınız/Koltuklarınızda oluşan lekeleri profesyonel
-                                    teknikler ile çıkarıyoruz.</p>
+                                <h2 class="service-title"><a>Stok & Depo Yönetimi</a></h2>
+                                <p class="service-text">Ürünleriniz modern, kontrollü ve hijyenik depolarda -18°C altında güvenle muhafaza edilir.</p>
                             </div>
                             <span class="shape-mockup" style="left: 0px; top: 0px;"><img
                                     src="assets/img/shapes/service-shape-5.png" alt="service element"></span>
@@ -978,7 +976,7 @@
                 <div class="row justify-content-xl-between justify-content-center align-items-center">
                     <div class="col-auto">
                         <p class="copyright-text"><i class="fal fa-copyright"></i> Copyright 2025 - <a
-                                href="index.html">Uyguntemizlik.com</a> Tüm hakları saklıdır.</p>
+                                href="index.html">Anatolian Su Ürünleri.com</a> Tüm hakları saklıdır.</p>
                     </div>
                     <div class="col-auto">
                         <div class="copyright-img">
