--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
                     <div class="col-lg-7 position-relative">
                         <div class="vs-hero__content">
                             <div class="vs-hero__subtitle wow animate__fadeInUp" data-wow-delay="0.60s"><span
-                                    class="icon"><img src="assets/img/icon/satisfaction-icon.svg"
-                                        alt="Hero Icon"></span>100% Memnuniyet </div>
+                                    class="icon"></span>100% Memnuniyet </div>
                             <h1 class="vs-hero__title wow animate__fadeInUp" data-wow-delay="0.70s">Anatolian <span
                                     class="vs-hero__title--highlight">Kaliteli</span> Deniz Ürünleri</h1>
                             <p class="vs-hero__text wow animate__fadeInUp" style="color:white;" data-wow-delay="0.80s">
@@ -301,7 +300,7 @@
                 <div class="col-xl-6">
                     <div class="img-box2 wow animate__fadeInUp" data-wow-delay="0.55s">
                         <div class="img-icon">
-                            <img src="assets/img/icon/about-icon1.svg" alt="icon">
+                            <img src="assets/img/icon/balikicon.svg" alt="icon">
                         </div>
                         <div class="img1">
                             <a href="hakkimizda.html"><img src="assets/img/about/calisanlar.png" alt="About Image"></a>
@@ -347,7 +346,7 @@
                             </div>
                         </div>
                         <div class="contact-box">
-                            <img src="assets/img/icon/author-icon.png" alt="author image">
+                            
                             <div class="contact-content">
                                 <p class="contact-text">Ofis Telefonumuz</p>
                                 <h6 class="contact-title"><a href="tel:+905319439334">0530 476 87 77</a></h6>
@@ -464,7 +463,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -489,7 +488,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -514,7 +513,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -539,7 +538,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -564,7 +563,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -589,7 +588,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -614,7 +613,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -640,7 +639,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -665,7 +664,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -690,7 +689,7 @@
                                 <span class="shape-mockup" style="right: -14px; top: -10px;"><img
                                         src="assets/img/shapes/angle-right.png" alt="counter element"></span>
                                 <div class="icon-btn3"> <span class="icon"><img
-                                            src="assets/img/icon/service-icon-3-4.svg" alt="service-icon"></span></div>
+                                            src="assets/img/icon/balikicon.svg" alt="service-icon"></span></div>
                             </div>
                         </div>
                         <div class="service-body">
@@ -870,7 +869,7 @@
                         <div class="media-style">
                             <div class="media-inner">
                                 <div class="counter-icon">
-                                    <span class="icon"><img src="assets/img/icon/counter-icon-2-3.png"
+                                    <span class="icon"><img src="assets/img/icon/gulenyuz.png"
                                             alt="icon"></span>
                                 </div>
                                 <div class="media-counter">
