--- a/iletisim.html
+++ b/iletisim.html
@@ -7,12 +7,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>İletişim - Uygun Temizlik</title>
+    <title>İletişim - Anatolia Su Ürünleri</title>
     <meta name="author" content="Anatolian Su Ürünleri.com">
     <meta name="description"
-        content="İstanbul'un tüm illerine hizmet veren Halı Yıkama Fabrikası. Halılarınızı profesyonel ekipmanlarımızla yıkıyoruz. Hızlı, güvenilir ve uygun fiyatlarla hizmet veriyoruz.">
+        content="Anatolia su ürünleri olarak dünya çapında hizmet sunuyoruz.">
     <meta name="keywords"
-        content="istanbul temizlik şirketi, ev temizliği, ofis temizliği, araç içi temizliği, mescit temizliği, kafe temizliği, profesyonel temizlik, genel temizlik, uygun temizlik, temizlik hizmeti istanbul">
+        content="su ürünleri,balık,türkiye balık,türkiye su ürünleri,seafood,anatolia sea food">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
