--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Uygun Temizlik</title>
+    <title>Anatolia - Su Ürünleri</title>
     <meta name="author" content="haliyikatma.com">
     <meta name="description"
-        content="İstanbul’un tüm ilçelerine hizmet veren profesyonel temizlik firmasıyız. Ev, ofis, inşaat sonrası ve detaylı temizlik ihtiyaçlarınızı uzman ekip ve profesyonel ekipmanlarımızla karşılıyoruz. Hızlı, güvenilir ve uygun fiyatlarla temizlik hizmeti sunuyoruz.">
+        content="Anatolia su ürünleri olarak dünya çapında hizmet sunuyoruz.">
     <meta name="keywords"
-        content="istanbul temizlik şirketi, ev temizliği, ofis temizliği, araç içi temizliği, mescit temizliği, kafe temizliği, profesyonel temizlik, genel temizlik, uygun temizlik, temizlik hizmeti istanbul">
+        content="su ürünleri,balık,türkiye balık,türkiye su ürünleri,seafood,anatolia sea food">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
